tests/baselines/reference/FunctionPropertyAssignments5_es6.errors.txt
tests/cases/conformance/es6/functionPropertyAssignments/FunctionPropertyAssignments5_es6.ts(1,11): error TS9001: Generators are not currently supported.
tests/cases/conformance/es6/functionPropertyAssignments/FunctionPropertyAssignments5_es6.ts(1,12): error TS1167: Computed property names are only available when targeting ECMAScript 6 and higher.


==== tests/cases/conformance/es6/functionPropertyAssignments/FunctionPropertyAssignments5_es6.ts (2 errors) ====
    var v = { *[foo()]() { } }
              ~
!!! error TS9001: Generators are not currently supported.
               ~~~~~~~
!!! error TS1167: Computed property names are only available when targeting ECMAScript 6 and higher.